# haratch-ocr

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  client_example.py  cloudbuild.yaml  deploy.sh  main.py  pyproject.toml  service.yaml  setup-gcp.sh  start_server.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/runner/: route.ts
dashboard/src/app/api/status/: route.ts
dashboard/src/components/: ComputationGrid.tsx  OCRFeed.tsx  ThemeToggle.tsx
dashboard/src/utils/: gcs.ts
runs/detect/train/: args.yaml
src/: api.py  async_pipeline.py  cleanup.py  download.py  extract.py  gcs.py  ocr.py  paths.py  pdf.py  performance_test.py  pipeline.py  runner.py  sync_gcs.py  translate.py
